<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.aalbatross.ims</groupId>
    <artifactId>IMS</artifactId>
    <version>1.0-SNAPSHOT</version>

    <parent>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-parent</artifactId>
            <version>2.4.0</version>
    </parent>

    <properties>
        <java.version>11</java.version>
        <commoncsv.version>1.8</commoncsv.version>
        <lombok.version>1.18.12</lombok.version>
        <springfox.version>3.0.0</springfox.version>
        <commonsfileupload.version>1.3.3</commonsfileupload.version>
        <commonsio.version>1.3.2</commonsio.version>
        <springboot.version>2.4.0</springboot.version>
        <errorprone.version>2.3.2</errorprone.version>
        <spotless.version>2.6.1</spotless.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mavencompilerplugin.version>3.8.0</mavencompilerplugin.version>
        <jacoco.version>0.8.3</jacoco.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-boot-starter</artifactId>
            <version>${springfox.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>${springfox.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${commoncsv.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>${commonsfileupload.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commonsio.version}</version>
        </dependency>
    </dependencies>

    <build>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${springboot.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${mavencompilerplugin.version}</version>
                    <configuration>
                        <release>11</release>
                        <arg>-Xplugin:ErrorProne
                            -Xep:MissingCasesInEnumSwitch:OFF
                            -Xep:ParameterName:OFF
                            -Xep:JdkObsolete:WARN
                            -Xep:BadAnnotationImplementation:ERROR
                            -Xep:BadComparable:ERROR
                            -Xep:BigDecimalEquals:ERROR
                            -Xep:BigIntegerEquals:ERROR
                            -Xep:CanonicalDuration:ERROR
                            -Xep:DateEquals:ERROR
                            -Xep:DivZero:ERROR
                            -Xep:EmptyIf:ERROR
                            -Xep:EqualsHashCode:ERROR
                            -Xep:FloatingPointLiteralPrecision:ERROR
                            -Xep:JavaLangClash:ERROR
                            -Xep:MultipleUnaryOperatorsInMethodCall:ERROR
                            -Xep:NumericEquality:ERROR
                            -Xep:ObjectToString:ERROR
                            -Xep:OptionalNotPresent:ERROR
                            -Xep:ShortCircuitBoolean:ERROR
                            -Xep:StaticGuardedByInstance:ERROR
                            -Xep:StaticQualifiedUsingExpression:ERROR
                            -Xep:StringEquality:ERROR
                            -Xep:SynchronizeOnNonFinalField:ERROR
                            -Xep:VarTypeName:ERROR
                            -Xplugin:ErrorProne
                        </arg>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>com.google.errorprone</groupId>
                                <artifactId>error_prone_core</artifactId>
                                <version>${errorprone.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.version}</version>
                    <executions>
                        <execution>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <java>
                            <!-- These are the defaults, you can override if you want -->
                            <includes>
                                <include>src/main/java/**/*.java</include>
                                <include>src/test/java/**/*.java</include>
                            </includes>

                            <importOrder /> <!-- standard import order -->
                            <importOrder>  <!-- or a custom ordering -->
                                <order>java,javax,org,com,</order>  <!-- or use <file>${basedir}/eclipse.importorder</file> -->
                                <!-- You probably want an empty string at the end - all of the
                                     imports you didn't specify explicitly will go there. -->
                            </importOrder>

                            <removeUnusedImports /> <!-- self-explanatory -->

                            <googleJavaFormat >
                                <version>1.9</version>
                            </googleJavaFormat><!-- has its own section below -->
                        </java>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>test</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                        <!-- attached to Maven test phase -->
                        <execution>
                            <id>check</id>
                            <phase>test</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule implementation="org.jacoco.maven.RuleConfiguration">
                                        <element>BUNDLE</element>
                                        <limits>
                                            <limit implementation="org.jacoco.report.check.Limit">
                                                <counter>INSTRUCTION</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>0.80</minimum>
                                            </limit>
                                            <limit implementation="org.jacoco.report.check.Limit">
                                                <counter>CLASS</counter>
                                                <value>MISSEDCOUNT</value>
                                                <maximum>0</maximum>
                                            </limit>
                                        </limits>
                                    </rule>
                                </rules>

                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>@{argLine} --illegal-access=deny</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.0</version>
                    <configuration>
                        <argLine>@{argLine} --illegal-access=permit</argLine>
                    </configuration>
                </plugin>
            </plugins>
    </build>


</project>